--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+ background-color: #DBF9FC
 }
 </style>
